trunk/Archive2/ac/418bd62085c240/output
main.cpp: In substitution of 'template<class U, class ... Us> using bar = foo<U, Us ...> [with U = Ts ...; Us = {<expression error>}]':
main.cpp:3:62:   required from here
main.cpp:2:63: error: template argument 2 is invalid
 template<typename U, typename... Us> using bar = foo<U, Us...>;
                                                               ^
